--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "browserify-global-shim": "^1.0.0",
     "coffeeify": "^0.7.0",
     "connect": "^3.2.0",
+    "debowerify": "^1.2.0",
     "gulp": "^3.8.7",
+    "gulp-clean": "^0.3.1",
     "gulp-embedlr": "^0.5.2",
     "gulp-if": "^1.2.4",
     "gulp-jade": "^0.7.0",
@@ -24,7 +26,13 @@
     "type": "git",
     "url": "git://github.com/mupat/gulp-tasks.git"
   },
-  "author": "Mupat (dev@mupat.net)",
+  "author": {
+    "name": "Mupat",
+    "url": "dev@mupat.net"
+  },
   "license": "MIT",
-  "homepage": "https://github.com/mupat/gulp-tasks"
+  "homepage": "https://github.com/mupat/gulp-tasks",
+  "bugs": {
+    "url": "https://github.com/mupat/gulp-tasks/issues"
+  }
 }
