--- a/package.json
+++ b/package.json
@@ -6,19 +6,21 @@
   "dependencies": {
     "browserify": "^5.11.0",
     "browserify-global-shim": "^1.0.0",
+    "coffee-script": "^1.10.0",
     "coffeeify": "^0.7.0",
     "connect": "^3.2.0",
     "debowerify": "^1.2.0",
+    "del": "^2.0.2",
     "gulp": "^3.8.7",
-    "gulp-clean": "^0.3.1",
     "gulp-embedlr": "^0.5.2",
     "gulp-if": "^1.2.4",
     "gulp-jade": "^0.7.0",
-    "gulp-less": "^1.3.5",
+    "gulp-less": "^3.0.3",
     "gulp-livereload": "^2.1.1",
     "gulp-notify": "^2.0.0",
     "gulp-sourcemaps": "^1.2.2",
     "gulp-util": "^3.0.1",
+    "less-plugin-autoprefix": "^1.5.1",
     "serve-static": "^1.6.3",
     "vinyl-source-stream": "^0.1.1"
   },
